
# provide an install target
nobase_dist_pkgdata_DATA = \
  asparagus.exp \
  lib/feedback.tcl lib/globals.tcl lib/string.tcl \
  steps/default.tcl steps/dispatcher.tcl

EXTRA_DIST = \
  example.tests/compile.exp example.tests/simple.exp

## pkgconfig integration
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = asparagus.pc

